<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_menu_home"/>
    <item android:id="@+id/nav_account"
        android:title="@string/menu_account"
        android:icon="@drawable/ic_menu_account"/>
    <item android:id="@+id/nav_my_activities"
        android:title="@string/menu_my_activities"
        android:icon="@drawable/ic_menu_activities"/>
    <item android:id="@+id/nav_statistics"
        android:title="@string/menu_statistics"
        android:icon="@drawable/ic_menu_statistics"/>
    <item android:id="@+id/nav_ranking"
        android:title="@string/menu_ranking"
        android:icon="@drawable/ic_menu_ranking"/>
    <item android:id="@+id/nav_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_menu_logout"/>
</menu>
