<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_activity"
            android:textSize="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border_circular"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/lbl_activity_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity"
                android:textStyle="bold"
                android:textSize="30dp"/>

            <TextView
                android:id="@+id/lbl_activity_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/level"
                android:textSize="25dp"/>

            <TextView
                android:id="@+id/lbl_activity_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/points"
                android:textSize="20dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/latest_activities"
            android:textSize="25dp"/>

        <ListView
            android:id="@+id/lst_latest_activities"
            android:background="@drawable/border_circular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="20dp">
        </ListView>

    </LinearLayout>

</LinearLayout>